Bug 124057 - The Tools > Word Count dialog (which is extremely trivial, no interaction in it) does not show up
Summary: The Tools > Word Count dialog (which is extremely trivial, no interaction in ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-13 13:01 UTC by How can I remove my account?
Modified: 2019-03-13 14:47 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description How can I remove my account? 2019-03-13 13:01:46 UTC
Description:
Try Tools > Word Count

Steps to Reproduce:
.

Actual Results:
.

Expected Results:
.


Reproducible: Always


User Profile Reset: No



Additional Info:
.
Comment 1 How can I remove my account? 2019-03-13 13:34:46 UTC
At first I thought that it is because .uno:WordCountDialog is not mentioned in the sUnoCommands array in doc_iniUnoCommands() in desktop/source/lib/init.cxx, but how would it then still have work in a normal Online?
Comment 2 Commit Notification 2019-03-13 14:34:42 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/893862c39701b31f25592d035aca6800baefb1fa%5E%21

tdf#124057: Do call RegisterControls() on non-DESKTOP

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 How can I remove my account? 2019-03-13 14:47:13 UTC
This was not hard to fix, which is nice for a change. Pop the work stack and return to what I was doing when I wanted to compare to this dialog.