tdf#124057: Do call RegisterControls() on non-DESKTOP

Otherwise the Tools > Word Count dialog doesn't show up in the iOS
app.

Change-Id: Ic425749cc8f3245d7a16d7784d77b02f6d47253f