sw/source/uibase/app/swdll.cxx
@@ -18,7 +18,6 @@
  */
 
 #include <memory>
-#include <config_features.h>
 
 #include <svx/svdobj.hxx>
 
@@ -133,10 +132,8 @@ SwDLL::SwDLL()
     // register your shell-interfaces here
     RegisterInterfaces();
 
-#if HAVE_FEATURE_DESKTOP
     // register your controllers here
     RegisterControls();
-#endif
 
     if (!utl::ConfigManager::IsFuzzing())
     {
